// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs ban demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-medium"
    >
      <label
        class="t-radio t-is-checked"
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="normal"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          常规型
        </span>
      </label>
       
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="card"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          卡片型
        </span>
      </label>
    </div>
  </div>
   
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
        </div>
         
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
           
          <!---->
        </div>
         
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
               
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      <div
        class="t-tab-panel"
      >
        <p
          style="padding: 25px;"
        >
          normal选项卡1内容
        </p>
      </div>
       
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          normal选项卡2内容
        </p>
      </div>
       
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          normal选项卡1内容
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs base demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
        </div>
         
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
           
          <!---->
        </div>
         
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
               
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      <div
        class="t-tab-panel"
      >
        <p
          style="padding: 25px;"
        >
          选项卡1
        </p>
      </div>
       
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡2
        </p>
      </div>
       
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡3
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs combination demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-medium"
    >
      <label
        class="t-radio t-is-checked"
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="normal"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          常规型
        </span>
      </label>
       
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="card"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          卡片型
        </span>
      </label>
    </div>
  </div>
   
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
        </div>
         
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
           
          <!---->
        </div>
         
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
               
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡1
        </p>
      </div>
      <div
        class="t-tab-panel"
      >
        <p
          style="padding: 25px;"
        >
          选项卡2
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡3
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡4
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡5
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡6
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡7
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡8
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡9
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡10
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡11
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡12
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡13
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡14
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡15
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡16
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡17
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡18
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡19
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs custom demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
        </div>
         
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
           
          <div
            class="t-tabs__btn t-tabs__add-btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"
              />
            </svg>
          </div>
        </div>
         
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      <div
        class="t-tab-panel"
      >
        <p
          style="padding: 25px;"
        >
          原有选项卡内容
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          原有选项卡内容
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs icon demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-medium"
    >
      <label
        class="t-radio t-is-checked"
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="normal"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          常规型
        </span>
      </label>
       
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="card"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          卡片型
        </span>
      </label>
    </div>
  </div>
   
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
        </div>
         
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
           
          <!---->
        </div>
         
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
               
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      <div
        class="t-tab-panel"
      >
         
        <p
          style="padding: 25px;"
        >
          normal选项卡1内容
        </p>
      </div>
       
      <div
        class="t-tab-panel"
        style="display: none;"
      >
         
        <p
          style="padding: 25px;"
        >
          normal选项卡2内容
        </p>
      </div>
       
      <div
        class="t-tab-panel"
        style="display: none;"
      >
         
        <p
          style="padding: 25px;"
        >
          normal选项卡3内容
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs operation demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
        </div>
         
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
           
          <div
            class="t-tabs__btn t-tabs__add-btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"
              />
            </svg>
          </div>
        </div>
         
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      <div
        class="t-tab-panel"
      >
        <p
          style="padding: 25px;"
        >
          原有选项卡内容
        </p>
      </div>
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          原有选项卡内容
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs position demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-medium"
    >
      <label
        class="t-radio t-is-checked"
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="top"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          top
        </span>
      </label>
       
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="right"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          right
        </span>
      </label>
       
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="bottom"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          bottom
        </span>
      </label>
       
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="left"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          left
        </span>
      </label>
    </div>
  </div>
   
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
        </div>
         
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
           
          <!---->
        </div>
         
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
               
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      <div
        class="t-tab-panel"
      >
        <p
          style="padding: 25px;"
        >
          选项卡1
        </p>
      </div>
       
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡2
        </p>
      </div>
       
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡3
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs size demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-medium"
    >
      <label
        class="t-radio t-is-checked"
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="medium"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          medium
        </span>
      </label>
       
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="large"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          large
        </span>
      </label>
    </div>
  </div>
   
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
        </div>
         
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
           
          <!---->
        </div>
         
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
               
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      <div
        class="t-tab-panel"
      >
        <p
          style="padding: 25px;"
        >
          选项卡1
        </p>
      </div>
       
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡2
        </p>
      </div>
       
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡3
        </p>
      </div>
    </div>
  </div>
   
  <br />
   
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
        </div>
         
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          >
            <!---->
          </transition-stub>
           
          <!---->
        </div>
         
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      <div
        class="t-tab-panel"
      >
        <p
          style="padding: 25px;"
        >
          选项卡1
        </p>
      </div>
       
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡2
        </p>
      </div>
       
      <div
        class="t-tab-panel"
        style="display: none;"
      >
        <p
          style="padding: 25px;"
        >
          选项卡3
        </p>
      </div>
    </div>
  </div>
</div>
`;
